[gd_scene load_steps=49 format=3 uid="uid://bvli3xctfxair"]

[ext_resource type="Script" uid="uid://cng3lployx2r" path="res://player/player_controller.gd" id="1_aolgh"]
[ext_resource type="Texture2D" uid="uid://dcewy3yb3xaob" path="res://player/blood-demon.png" id="1_jwvdf"]
[ext_resource type="Script" uid="uid://jmnb741sas32" path="res://core/custom_hurt_box_player.gd" id="3_1ug5r"]
[ext_resource type="Script" uid="uid://oh6appk8t360" path="res://core/state_machine.gd" id="3_n604i"]
[ext_resource type="Script" uid="uid://b1u1246plg80p" path="res://core/custom_hit_box.gd" id="4_58fft"]

[sub_resource type="AtlasTexture" id="AtlasTexture_y7gcp"]
atlas = ExtResource("1_jwvdf")
region = Rect2(896, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_58fft"]
atlas = ExtResource("1_jwvdf")
region = Rect2(1024, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ug5r"]
atlas = ExtResource("1_jwvdf")
region = Rect2(1152, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vdlb"]
atlas = ExtResource("1_jwvdf")
region = Rect2(1280, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ncfgy"]
atlas = ExtResource("1_jwvdf")
region = Rect2(1408, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tgn06"]
atlas = ExtResource("1_jwvdf")
region = Rect2(1536, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ds1p4"]
atlas = ExtResource("1_jwvdf")
region = Rect2(1664, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcwwy"]
atlas = ExtResource("1_jwvdf")
region = Rect2(384, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m686p"]
atlas = ExtResource("1_jwvdf")
region = Rect2(512, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ip5wp"]
atlas = ExtResource("1_jwvdf")
region = Rect2(640, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wffvd"]
atlas = ExtResource("1_jwvdf")
region = Rect2(768, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_frfxo"]
atlas = ExtResource("1_jwvdf")
region = Rect2(896, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3n01w"]
atlas = ExtResource("1_jwvdf")
region = Rect2(0, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_63y2c"]
atlas = ExtResource("1_jwvdf")
region = Rect2(128, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwsmi"]
atlas = ExtResource("1_jwvdf")
region = Rect2(256, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wygbb"]
atlas = ExtResource("1_jwvdf")
region = Rect2(384, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cd0g6"]
atlas = ExtResource("1_jwvdf")
region = Rect2(512, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2iisw"]
atlas = ExtResource("1_jwvdf")
region = Rect2(640, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_njjus"]
atlas = ExtResource("1_jwvdf")
region = Rect2(768, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rak8c"]
atlas = ExtResource("1_jwvdf")
region = Rect2(896, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rn7e"]
atlas = ExtResource("1_jwvdf")
region = Rect2(1024, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kntgd"]
atlas = ExtResource("1_jwvdf")
region = Rect2(0, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5kl0c"]
atlas = ExtResource("1_jwvdf")
region = Rect2(128, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hy1a"]
atlas = ExtResource("1_jwvdf")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1mb3x"]
atlas = ExtResource("1_jwvdf")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1m33"]
atlas = ExtResource("1_jwvdf")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_14n37"]
atlas = ExtResource("1_jwvdf")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnp0c"]
atlas = ExtResource("1_jwvdf")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6hvb"]
atlas = ExtResource("1_jwvdf")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewl6d"]
atlas = ExtResource("1_jwvdf")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bombk"]
atlas = ExtResource("1_jwvdf")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lk5ey"]
atlas = ExtResource("1_jwvdf")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdejc"]
atlas = ExtResource("1_jwvdf")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbyx6"]
atlas = ExtResource("1_jwvdf")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_78ce8"]
atlas = ExtResource("1_jwvdf")
region = Rect2(512, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8y236"]
atlas = ExtResource("1_jwvdf")
region = Rect2(640, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2xlv"]
atlas = ExtResource("1_jwvdf")
region = Rect2(768, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4ytl"]
atlas = ExtResource("1_jwvdf")
region = Rect2(896, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_iuqkv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7gcp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58fft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ug5r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0vdlb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ncfgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tgn06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ds1p4")
}],
"loop": false,
"name": &"attack_heavy",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcwwy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m686p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ip5wp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wffvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_frfxo")
}],
"loop": false,
"name": &"attack_light",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3n01w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63y2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwsmi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wygbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cd0g6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2iisw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_njjus")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rak8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rn7e")
}],
"loop": false,
"name": &"dissolve",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kntgd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5kl0c")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hy1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1mb3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1m33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14n37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnp0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6hvb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewl6d")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bombk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lk5ey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdejc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbyx6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78ce8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8y236")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2xlv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4ytl")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ug5r"]
size = Vector2(20, 35.1147)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_58fft"]
size = Vector2(85.5, 62)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_58fft"]
radius = 32.9698
height = 96.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0vdlb"]
radius = 12.5
height = 34.0

[node name="Blood Demon" type="CharacterBody2D"]
position = Vector2(300, 563)
collision_mask = 128
script = ExtResource("1_aolgh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_iuqkv")
animation = &"attack_light"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["body_block"]]
position = Vector2(2, 20)
scale = Vector2(1.75983, 2.46867)
shape = SubResource("RectangleShape2D_1ug5r")

[node name="Boxes" type="Node2D" parent="."]
scale = Vector2(4, 4)

[node name="CustomHitBoxLight" type="Area2D" parent="Boxes"]
position = Vector2(35, -7.75)
scale = Vector2(0.25, 0.25)
collision_layer = 4
collision_mask = 8
script = ExtResource("4_58fft")
damage = 10
metadata/_custom_type_script = "uid://b1u1246plg80p"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boxes/CustomHitBoxLight"]
light_mask = 2
visibility_layer = 2
position = Vector2(-68.25, 59)
shape = SubResource("RectangleShape2D_58fft")
disabled = true
debug_color = Color(0.736666, 0.395529, 0.659666, 0.42)

[node name="CustomHitBoxHard" type="Area2D" parent="Boxes"]
position = Vector2(35, -7.75)
scale = Vector2(0.25, 0.25)
collision_layer = 4
collision_mask = 8
script = ExtResource("4_58fft")
damage = 20
metadata/_custom_type_script = "uid://b1u1246plg80p"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boxes/CustomHitBoxHard"]
light_mask = 2
visibility_layer = 2
position = Vector2(-70, 45)
rotation = -0.341732
scale = Vector2(1.15074, 1.16721)
shape = SubResource("CapsuleShape2D_58fft")
disabled = true

[node name="CustomHurtBox" type="Area2D" parent="Boxes"]
position = Vector2(0.5, 5.75)
scale = Vector2(0.439104, 0.573885)
collision_layer = 2
collision_mask = 16
script = ExtResource("3_1ug5r")
metadata/_custom_type_script = "uid://jmnb741sas32"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boxes/CustomHurtBox"]
light_mask = 0
visibility_layer = 0
position = Vector2(0, -1.5)
shape = SubResource("CapsuleShape2D_0vdlb")
debug_color = Color(0.835491, 0, 0.199748, 0.42)

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_n604i")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(330, -205)
process_callback = 0
editor_draw_limits = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Boxes/CustomHurtBox" to="." method="_on_custom_hurt_box_body_entered"]
